--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
-<html lang="ru-RU" style="font-family:verdana;">
-
+<html lang="ru-RU" style="font-family:'Trebuchet MS';">
+    <style>
+        body {
+            background-image: url('lopata.png') ;
+            background-size: 1%;
+        }
+        a:link, a:visited, a:hover, a:active {
+            color:red;
+        }
+    </style>
+    <head>
+        <title>Главная</title>
+    </head>
 <body>
-    <h1 style="text-align: center; font-size: 1000%"> ИДИ НАХУЙ</h1>
+    <h1 style="text-align: center; font-size: 500%;"> Приветствуем в Клубе Великой Лопаты!</h1>
+    <p style="font-size: 150%; color:blue"> На этом сайте вы можете посмотреть <span title="Правила, требования и т.д."> всё </span>об этом клубе и также вступить в него! Присоединяйтесь, мы вам очень рады!</p>
+    <h1 style="text-align: center; font-size: 200%;"> Навигация по сайту</h1>
+    <br>
+    <br>
+    <br>
+    <a href="rules.html">Правила</a> <br>
+    <a href="ShovelTheGreat.html">Лопата Великая (Лидер)</a> <br>
+    <a href="unaccessable.html">Офисы и местоположение</a> <br>
+    <a href="meet.html">Вступление</a> <br>
 </body>
 </html>
