--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </style>
     <head>
         <title>Главная</title>
+        <link rel="icon" href="1lopata.ico">
     </head>
 <body>
     <h1 style="text-align: center; font-size: 500%;"> Приветствуем в Клубе Великой Лопаты!</h1>
